Search - added autocomplete feature for tags; added getTags endpoint and relevant actions, reducers to achieve that
