# api/swagger/swagger.yaml
@@ -72,6 +72,22 @@ paths:
         default:
           description: Error
           schema:
+            $ref: "#/definitions/ErrorResponse"
+  /tags:
+    x-swagger-router-controller: tags
+    get:
+      description: return tags available from tag library
+      operationId: getTags
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
             $ref: "#/definitions/ErrorResponse"            
   /hello:
     # binds a127 app logic to a route
